--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "lightning-address-nodejs",
+  "name": "lightning-address",
   "version": "1.0.0",
   "description": "Lightning Address Server",
   "main": "src/server.ts",
   "repository": "https://github.com/mefatbear/lightning-address-nodejs",
-  "author": "@MeFatBear",
+  "author": "@N",
   "license": "MIT",
   "private": false,
   "scripts": {
     "build": "tsc",
     "dev": "ts-node -r tsconfig-paths/register --files src/server.ts",
-    "entrypoint": "./entrypoint.sh"
+    "entrypoint": "./entrypoint.sh",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^16.11.10",
-    "eslint": "^8.3.0",
-    "eslint-config-next": "^12.0.4",
-    "husky": "^4.3.0",
-    "lint-staged": "^12.1.2",
-    "postcss": "^8.4.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-sort-imports": "^1.0.1",
-    "pretty-quick": "^3.1.2",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.7.4",
+    "eslint": "^9.11.1",
+    "eslint-config-next": "^14.2.14",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-sort-imports": "^1.8.6",
+    "pretty-quick": "^4.0.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2"
   },
   "husky": {
     "hooks": {
@@ -34,13 +35,14 @@
     }
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^6.0.2",
-    "helmet": "^4.6.0",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "express-handlebars": "^8.0.1",
+    "helmet": "^8.0.0",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.1.0",
-    "socks-proxy-agent": "^6.1.1",
-    "winston": "^3.3.3"
+    "node-fetch": "^3.3.2",
+    "socks-proxy-agent": "^8.0.4",
+    "winston": "^3.14.2"
   }
 }
